tests/errors/first_stage/operation/operand_macro/operand_macro.as
; a macro was used as an operand
mcr aMacro
mov r1, r2
endmcr

prn aMacro